# file-upload-fastapi-server

./: README.md  pyproject.toml
file_upload_tracker/: .env-template  pyproject.toml
file_upload_tracker/src/: config.py  main.py
file_upload_tracker/src/file_upload_tracker/: main.py
file_upload_tracker/src/file_upload_tracker/handlers/: file_handlers.py  handlers.py  log_handler.py  mail_handlers.py  observer_handlers.py
file_upload_tracker/src/file_upload_tracker/routers/: file_tracker_router.py  file_upload_tracker.py
file_upload_tracker/src/handlers/: file_handlers.py  log_handlers.py  mail_handlers.py  observer_handlers.py  one_drive_file_handler.py
file_upload_tracker/src/routers/: file_tracker_router.py
file_upload_tracker/src/utils/: auth_util.py  file_util.py  load_env.py
file_upload_tracker/tests/: conftest.py  test_main.py
src/: config.py
src/handlers/: file_handlers.py  one_drive_file_handlers.py
src/routers/: file_tracker_router.py
src/streamlit/: visualize.py
src/utils/: file_util.py
