[tool.poetry]
name = "file-upload-tracker"
version = "0.1.0"
description = "file upload tracker"
authors = ["Soliton"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = "^0.30.5"
watchdog = "^4.0.1"
python-dotenv = "^1.0.1"
coverage = "^7.6.1"
pydantic-settings = "^2.4.0"
requests = "^2.32.3"
email_handler = {path = "C:/Users/ashritha.shankar/email_handler/email_handler/dist/email_handler-0.3.0.tar.gz"}
log-events = "^0.1.0"
httpx = "^0.27.0"
msal = "^1.30.0"
aiohttp = "^3.10.2"
pandas = "^2.2.2"
streamlit = "^1.37.1"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
