[tool.poetry]
name = "file-upload-tracker"
version = "0.1.0"
description = "file upload tracker"
authors = ["Soliton"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = "^0.30.5"
watchdog = "^4.0.1"
python-dotenv = "^1.0.1"
coverage = "^7.6.1"
pydantic-settings = "^2.4.0"
requests = "^2.32.3"
email_handler = "^0.2.0"
log-events = "^0.1.0"
httpx = "^0.27.0"
msal = "^1.30.0"
pyngrok = "^7.2.0"
aiohttp = "^3.10.2"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
